# syn-tg-bot

./: .env.example  LICENSE  README.md  Taskfile.yml  compose.yaml  pyproject.toml
dev/: Dockerfile
hw01/: README.md  Taskfile.yml  compose.yaml  main.py  pyproject.toml
hw02/: README.md  Taskfile.yml  main.py  pyproject.toml
hw03/: README.md  Taskfile.yml  main.py  pyproject.toml
hw04/: README.md  Taskfile.yml  main.py  pyproject.toml
hw06/: README.md  Taskfile.yml  main.py  pyproject.toml
hw09/: README.md  Taskfile.yml  main.py  pyproject.toml
